k8s/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
spec:
  containers:
  - name: shell
    image: nicolaka/netshoot
    command: ["sleep", "infinity"]
