k8s/mock-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mock-server
  labels:
    app: mock-server
spec:
  containers:
  - name: mock-server
    image: ghcr.io/ssup2/mock-go-server:0.1.3
    ports:
    - containerPort: 8080
    - containerPort: 9090
    securityContext:
      capabilities:
        add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: mock-server
spec:
  selector:
    app: mock-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 9090
    targetPort: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mock-server
spec:
  hosts:
  - mock-server
  http:
  - retries:
      attempts: 2
      retryOn: connect-failure
    route:
    - destination:
        host: mock-server
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mock-server
spec:
  host: mock-server
  trafficPolicy:
    connectionPool:  
      tcp: 
        maxConnections: 1 # default value is 2^31-1
      http:
        http1MaxPendingRequests: 1  # default value is 2^31-1 (unlimited)
        maxRequestsPerConnection: 1 # default value is 0 (unlimited, 2^29)
    outlierDetection:
      consecutive5xxErrors: 5 # default value is 5
      interval: 10s           # default value is 10s
      baseEjectionTime: 30s   # default value is 30s
      maxEjectionPercent: 100 # default value is 100
